# soft_rast

./: .gdbinit  .gitignore  CMakeLists.txt  LICENSE  README.md  app.cpp  fb.cpp  fb.h  main.cpp  ppm2gif-hq.sh  ppm2gif.sh
data/: info.txt
data/halloween/: Halloween.blend  Halloween.blend1  Halloween_text.mtl  candle_01.mtl  scene.blend
data/halloween/Models/: candle_01.mtl  fence_metal_01.mtl  pumpkin_03.mtl  pumpkin_03_hat.mtl  stone_02.mtl
data/halloween/Textures/: batch_convert.sh  pumpkin_02.tga  pumpkin_03.tga
data/halloween/Textures/tga/: BarkDecidious.tga  Body.tga  Body_01.tga  Body_parts.tga  Body_parts_01.tga  BrickSmallBrown.tga  Candles.tga  Candles_Emissor.tga  Candy_Bowl.tga  Candy_Container.tga  Candy_Container_01.tga  Candy_Container_02.tga  Character.tga  Coffin.tga  Coffin_01.tga  Concrete.tga  Farmland.tga  Ghost.tga  Metal.tga  Pumpkin.tga  Pumpkin_01.tga  Scarecrow.tga  Scarecrow_01.tga  Shovel.tga  Spiderweb.tga  Stone.tga  Stone_01.tga  Stone_02.tga  Stone_03.tga  Stone_04.tga  Stone_05.tga  Stone_06.tga  Stone_07.tga  Stone_08.tga  Straw.tga  Sweets.tga  Sweets_01.tga  Tree.tga  Tree_01.tga  Tree_02.tga  (+4 more)
data/sci-fi/_models/: uvmap.tga  wilko.tga
